--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,6 +12,9 @@
     "no-console": 0, // Means warning
     "prettier/prettier": 2, // Means error
     "ban-ts-comment": 0,
+    "@typescript-eslint/no-explicit-any": "off",
+    "@typescript-eslint/ban-ts-comment":"off",
+    "@typescript-eslint/no-empty-function": "off",
     "@typescript-eslint/no-unused-vars": [
       "warn", // or "error"
       {
