--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -23,24 +23,13 @@ jobs:
           npm install
           npm run build --if-present
           npm run test --if-present
-      - name: Set date in env
-        run: |
-          echo "MY_DATE=$(date +"%FT%H%M")" >> $GITHUB_ENV  
-      - name: Make temporary directory
-        run: |
-          mkdir ${{env.TEMPDIR}}                    
-      - name: Get staticwebdev (full data)
-        run: |
-          node ./dist/index.js --org staticwebdev --verbose true --max -1 --prop all --file ./${{env.TEMPDIR}}/staticwebdev.json --page 100 --pat ${{ secrets.GITHUB_TOKEN }}
-      - name: Get azure-samples (full data)
-        run: |
-          node ./dist/index.js --org azure-samples --verbose true --max -1 --prop all --file ./${{env.TEMPDIR}}/azure-samples.json --delay 2000 --page 30 --pat ${{ secrets.GITHUB_TOKEN }}
+          npm run start:package:aggregate 
       - name: List files
         id: list_files
         run: |
-            cd ${{env.TEMPDIR}} && ls -la 
+            cd scope && ls -la 
       - name: Upload artiface
         uses: actions/upload-artifact@v3
         with:
-          name: ${{env.MY_DATE}}-github-data.zip # name of artifact to create
-          path: ./${{env.TEMPDIR}} # name of existing file/dir to add to artifact             
+          name: ${{env.MY_DATE}}-scope-github-data.zip # name of artifact to create
+          path: ./scope/repos.json # name of existing file/dir to add to artifact             
