--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -32,5 +32,5 @@ jobs:
       - name: Upload artiface
         uses: actions/upload-artifact@v3
         with:
-          name: ${{env.MY_DATE}}-scope-repos.json # name of artifact to create
+          name: scope-repos.json # name of artifact to create
           path: ./scope/repos.json # name of existing file/dir to add to artifact             
