--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -9,20 +9,20 @@ env:
   FILENAMEANDPATH: config.json
   TEMPDIR: scope
   SECONDREPO: cqa-sandbox/cqa-dashboard-app
-  MYDATE: $(date +"%FT%H%M")"
   PAT: ${{ secrets.GITHUB_TOKEN }} # Used only for scope tool across GitHub repos
 jobs:
   collectdata:
     runs-on: ubuntu-latest
     timeout-minutes: 30
-
     name: GitHub data scrape repos
     outputs:
       output1: ${{ steps.staticwebdev.outputs.data }}    
     steps:
-      # - name: Set date in env
-      #   run: |
-      #     echo "MY_DATE=$(date +"%FT%H%M")" >> $GITHUB_ENV  
+      - name: Set date in env
+        run: |
+          echo "MYDATE=$(date +"%FT%H%M")" >> $GITHUB_ENV  
+          mkdir -p ${{env.TEMPDIR}}
+          # ls -la 
       - uses: actions/checkout@master
       - name: Install and Build # output file name scope-repos.json
         run: |
