--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -24,7 +24,7 @@ jobs:
           mkdir -p ${{env.TEMPDIR}}
           # ls -la 
       - uses: actions/checkout@master
-      - name: Install and Build # output file name scope-repos.json
+      - name: Install and Build # output file name repos.json
         run: |
           npm install
           npm run build --if-present
@@ -44,7 +44,7 @@ jobs:
             path: './${{env.SECONDREPO}}'
       - name: commit file to another repo
         run: |
-            cp scope-repos.json ./${{env.SECONDREPO}}/${{ env.TEMPDIR }}/${{env.MYDATE}}-${{env.FILENAMEANDPATH}} 
+            cp repos.json ./${{env.SECONDREPO}}/${{ env.TEMPDIR }}/${{env.MYDATE}}-${{env.FILENAMEANDPATH}} 
             cd ./${{env.SECONDREPO}}
             git config user.name github-actions
             git config user.email github-actions@github.com
