--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -24,17 +24,18 @@ jobs:
           mkdir -p ${{env.TEMPDIR}}
           # ls -la 
       - uses: actions/checkout@master
-      - name: Install and Build # output file name repos.json
+      - name: Install and Build # output file name ./scope/repos.json
         run: |
           npm install
           npm run build --if-present
           npm run test --if-present
           npm run start:package:aggregate 
+          pwd && ls -la
         id: generate_output
       - name: List files
         id: list_files
         run: |
-            cd scope && ls -la 
+            cd scope && ls -la && cd ..
       - name: Checkout # checkout the dashboard repo as submodule of this repo
         uses: actions/checkout@master
         with:
@@ -45,7 +46,7 @@ jobs:
       - name: commit file to another repo
         run: |
             ls -la
-            cp ./repos.json ./${{env.SECONDREPO}}/${{ env.TEMPDIR }}/${{env.MYDATE}}-${{env.FILENAMEANDPATH}} 
+            cp ./scope/repos.json ./${{env.SECONDREPO}}/${{ env.TEMPDIR }}/${{env.MYDATE}}-${{env.FILENAMEANDPATH}} 
             cd ./${{env.SECONDREPO}}
             git config user.name github-actions
             git config user.email github-actions@github.com
