--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,6 +4,8 @@ on:
   workflow_dispatch:
   schedule:
     - cron: "0 8 * * *"
+  pull_request_target:
+    types: [opened, edited, reopened]
 
 env:
   FILENAMEANDPATH: config.json
