--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -64,7 +64,7 @@ jobs:
       - name: Compare files # Save to file and job output, print to console, if empty, no difference found
         id: compare
         run: | 
-          cmp /repo-scope-tool/config.json ./cqa-dashboard-app/scope/config.json
+          cmp ./repo-scope-tool/config.json ./cqa-dashboard-app/scope/config.json
           echo "COMPARE=$(cmp -s ./repo-scope-tool/config.json ./cqa-dashboard-app/scope/config.json && echo 'true' || echo 'false')" >> $GITHUB_ENV  
           echo "${{env.COMPARE}}"
           if [[ $COMPARE ]]; then echo "true" >> "$GITHUB_OUTPUT"
