--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "start:package:azuresamples": "bash scripts/start-run-azure-samples.sh",
     "start:package:staticwebdev": "bash scripts/start-run-staticwebdev.sh",
     "start:package:merge": "bash scripts/merge.sh",
-    "start:package:aggregate": "npm run start:package:azuresamples && npm run start:package:staticwebdev && npm run start:package:merge"
+    "start:package:aggregate": "npm run start:package:azuresamples && npm run start:package:staticwebdev && npm run start:package:merge",
+    "test:action:staticwebdev": "bash scripts/sample-run-staticwebdev.sh",
+    "test:package:merge": "bash scripts/test-merge.sh"
+
   },
   "repository": {
     "type": "git",
