--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -66,7 +66,7 @@ jobs:
         run: | 
           echo "Compare true/false only"
           echo "COMPARE=$(cmp -s ./repo-scope-tool/config.json ./cqa-dashboard-app/scope/config.json && echo 'true' || echo 'false')" >> $GITHUB_ENV  
-          echo "compare='${{env.COMPARE}}'"
+          echo "Files did/didn't compare='$COMPARE' '${{env.COMPARE}}'"
       - name: Upload artiface
         uses: actions/upload-artifact@v3
         with:
