--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -65,3 +65,6 @@ jobs:
           echo "Compare true/false only"
           echo "COMPARE=$(cmp -s ./repo-scope-tool/config.json ./cqa-dashboard-app/scope/config.json && echo 'true' || echo 'false')" >> $GITHUB_ENV  
           echo "Files did/didn't '$COMPARE' '${{env.COMPARE}}'"
+          needToCommit=${{env.COMPARE}}
+          cmp ./repo-scope-tool/config.json ./cqa-dashboard-app/scope/config.json > ./repo-scope-tool/diff.txt
+          cat diff.txt
