--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -66,7 +66,10 @@ jobs:
         run: | 
           echo "Compare true/false only"
           echo "COMPARE=$(cmp -s ./repo-scope-tool/config.json ./cqa-dashboard-app/scope/config.json && echo 'true' || echo 'false')" >> $GITHUB_ENV  
-          echo "Files did/didn't compare='$COMPARE' '${{env.COMPARE}}'"
+          echo "Files did/didn't '$COMPARE' '${{env.COMPARE}}'"
+          needToCommit=${{env.COMPARE}}
+          cmp ./repo-scope-tool/config.json ./cqa-dashboard-app/scope/config.json > ./repo-scope-tool/diff.txt
+          echo "$(cat ./repo-scope-tool/diff.txt)"
       - name: Upload artiface
         uses: actions/upload-artifact@v3
         with:
