--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -63,8 +63,8 @@ jobs:
         id: compare
         run: | 
           echo "Compare true/false only"
-          echo "COMPARE=$(cmp -s ./repo-scope-tool/config.json ./cqa-dashboard-app/scope/config.json && echo 'true' || echo 'false')" >> $GITHUB_ENV  
-          echo "Files did/didn't '$COMPARE' '${{env.COMPARE}}'"
+          echo "COMPARE=$(cmp -s ./repo-scope-tool/config.json ./cqa-dashboard-app/scope/config.json)" >> $GITHUB_ENV  
+          echo "Files did/didn't $COMPARE '${{env.COMPARE}}'"
           needToCommit=${{env.COMPARE}}
           cmp ./repo-scope-tool/config.json ./cqa-dashboard-app/scope/config.json > ./repo-scope-tool/diff.txt
           echo "$(cat ./repo-scope-tool/diff.txt)"
